# AfricaPEP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  new_scraper.md
.github/workflows/: ci.yml
africapep/: config.py
africapep/api/: main.py  schemas.py
africapep/api/routers/: countries.py  graph.py  health.py  pep.py  screen.py  search.py
africapep/database/: init.py  models.py  neo4j_client.py  postgres_client.py  seed.py  sync.py
africapep/database/schema/: neo4j_constraints.cypher  postgres_schema.sql
africapep/pipeline/: classifier.py  extractor.py  normaliser.py  relationship_builder.py  resolver.py  scoring.py
africapep/scheduler/: jobs.py
africapep/scraper/: base_scraper.py
africapep/scraper/spiders/: __init__.py  algeria_presidency.py  angola_presidency.py  base_gov_gazette.py  benin_presidency.py  botswana_parliament.py  burkinafaso_presidency.py  burundi_presidency.py  cameroon_presidency.py  capeverde_presidency.py  car_presidency.py  chad_presidency.py  (+57 more)
docs/plans/: 2026-03-06-africapep-system-design.md
scripts/: dedup_neo4j.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_entity_resolution.py  test_neo4j_client.py  test_pipeline.py  test_scrapers.py  test_screening.py  test_sync.py  test_utils.py
(+4 files in other folders)
