[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africapep"
version = "1.0.0"
description = "Open-source African PEP (Politically Exposed Persons) database with scrapers, NLP pipeline, and API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Patrick Attankurugu", email = "patricka.azuma@gmail.com"}]
keywords = ["pep", "aml", "kyc", "compliance", "africa", "sanctions", "screening"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/PatrickAttankurugu/AfricaPEP"
Repository = "https://github.com/PatrickAttankurugu/AfricaPEP"
Documentation = "https://api-pep.patrickaiafrica.com/docs"
Issues = "https://github.com/PatrickAttankurugu/AfricaPEP/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=africapep --cov-report=term-missing --ignore=tests/test_entity_resolution.py"
markers = [
    "integration: marks tests requiring database connections",
    "slow: marks slow-running tests",
]
